a fews trasintions in css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>todo-list</title>
+    <style>
+      body{
+        font-size: 100%;
+      }
+      .fade-enter-active, .fade-leave-active {
+        transition: opacity .5s;
+      }
+      .fade-enter, .fade-leave-to {
+        opacity: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
